Fixed overflow of ic-content-value

--- a/src/styles/interventions_view/smallviews/intervention_card.css
+++ b/src/styles/interventions_view/smallviews/intervention_card.css
@@ -3,7 +3,7 @@
 	height: 200px;
 	width: 500px;
 
-	padding: 20px;
+	padding: 20px 120px 20px 20px;
 
 	background-color: #FFF;
 	border-top: 1px solid #E2E2E2;
@@ -154,7 +154,7 @@
 .ic-content {
 
 	height: 100%;
-	width: calc(100% - (40px * 2 + 20px) - 10px);
+	width: 100%;
 
 	display: flex;
 	flex-direction: column;
@@ -170,6 +170,7 @@
 
 	display: flex;
 	align-items: center;
+	justify-content: flex-start;
 
 	margin-bottom: 18px;
 
@@ -184,6 +185,7 @@
 .ic-content-row > * {
 
 	float: left;
+	white-space: nowrap;
 
 	margin-right: 10px;
 
@@ -212,7 +214,10 @@
 
 .ic-content-value {
 
-	white-space: nowrap;
+	flex-wrap: nowrap;
+	flex-grow: 1;
+	overflow: hidden;
+
 	font-weight: bolder;
 
 }
